--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,11 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    //Valid
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.2'
+
 
     //Lombok
     compileOnly 'org.projectlombok:lombok'
