--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ dependencies {
 
     //Database
     runtimeOnly 'com.mysql:mysql-connector-j'
+
+    //websocket
+    implementation('org.springframework.boot:spring-boot-starter-websocket')
 }
 
 tasks.named('test') {
