--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,11 @@ dependencies {
 
     //websocket
     implementation('org.springframework.boot:spring-boot-starter-websocket')
+
+    //Swagger
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+
+
 }
 
 tasks.named('test') {
