--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,10 @@ dependencies {
     //Swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 
+    // stomp
+    implementation 'org.webjars:stomp-websocket:2.3.4'
+
+
 
 }
 
