--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,18 @@ services:
       - "./db/.env"
     ports:
       - "3306:3306"
+
+  backend:
+    build : .
+    restart: always
+    depends_on:
+      - mysqldb
+    environment:
+      WAIT_HOSTS: mysqldb:3306
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysqldb:3306/tukgraduation?createDatabaseIfNotExist=true&characterEncoding=UTF-8&profileSql=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: 12345678
+    #      SPRING_PROFILES_ACTIVE: dev
+    ports:
+      - "8080:8080"
+    command: [ "java", "-jar", "/app.jar" ]
