--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,10 +8,16 @@ spring:
     database: mysql
     hibernate:
       ddl-auto: create
+    defer-datasource-initialization: true
     properties:
       hibernate:
         format_sql: true
     show_sql: true
+  sql:
+    init:
+      data-locations: classpath*:db/data.sql
+      mode: always
+
 
 springdoc:
   swagger-ui:
