--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     // stomp
     implementation 'org.webjars:stomp-websocket:2.3.4'
 
+    implementation 'org.webjars:sockjs-client:1.5.1'
+
 
 
 }
